2003-07-04  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/gdcmHeader.h : added method to get the file name
      * vtk/vtkGdcmReader.[cxx|h] : bug fix concerning loading of bad dicom
        files. Added method to remove all files on the input
        Added FIXME comment concerning the bad parsing of header made by
        ExecuteInformation method (in ExecuteData method)

2003-07-03  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/Makefile.am: vtkGdcmReader.h should now be cleany installed
        when using make instal.
      * src/gdcmFile.cxx : bug fix under Window after JPR commit
        RQ : the JPR doesn't appear in the ChangeLog... normal for him

2003-07-03  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * setup.py : adding include dir of jpeg lib to compile all sources
      * */Win32/*.dsp : JPR fix for windows compilation

2003-07-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/jpeg/libijg8/jconfig.* : JPR bug fix : now compile on both
        linux and WINDOWS !
      * src/gdcmJpeg.cxx : JPR bug fix : erroneous include
      * src/win32/gdcmdll.dsp : JPR fix for windows compilation

2003-07-02  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * setup.py is again effective on un*x (takes into account the
        addon of the jpeg library)
      * Doc/DoxyDevelInstal.txt added (developper's raw documentation)
      * Doc/Doxy* updated (includes above enhancements)
      * INSTALL now points to web documentation

2003-07-01  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader.h doesn't make unnecessary reference to
        gdcmUtil.h anymore.
      * gdcmPython/Makefile.am now avoids calling the wrappers for the
        clean target.
      * src/gdcm*.[cxx|h] :
        - to allow compilation with gcc 3.x
          -- clean up of STL usage (added explicit usage of std::)
          -- small fixes on exceptions.
          Note: linking not tested !